# SDL3-CPT-Project

./: .gitignore  CMakeLists.txt  README.md
data/: programIn.csv  pythonOut.csv
src/: main.cpp
src/backend/cpp/: Parse.cpp  Parse.hpp  bubble.hpp  run.cpp  run.hpp
src/backend/python/: bubbleSort.py  parseData.py
src/frontend/: CSVParser.cpp  CSVParser.hpp  dataHandler.cpp  dataHandler.hpp  generateDataGraph.hpp  main.cpp
